# banner_flip_engine

./: Banner_Flip_Engine_Fine_Tune.ipynb  LICENSE  README.md  app.py  finetune.py  finetune_eval.py  profile_agent.py  pyproject.toml  rag_agent.py  ragas_eval.py  sql_agent.py  synthetic_data_gen.py  utils.py
.chainlit/: config.toml
data/: competitor_store_200.json  enhanced_store_data_200.txt
ragas_eval/: base_result.txt  finetuned_result.txt
